assets/css/dashboard.css
.dashboard {
  display: flex;
  flex-direction: column;
  max-width: 630px;
  max-height: 330px;
  margin-bottom: 31px;
  padding: 20px 0;

  font-family: Arial, sans-serif;

  background: #e9e8e4 url('/assets/images/dashboard-background.png') no-repeat center;
  border-radius: 20px;
}

.dashboard__container {
  width: 100%;
  padding-right: 20px;
  padding-left: 20px;
}

.dashboard__heading {
  margin: 0 0 5px 0;
}

.dashboard__status-message {
  margin: 0 0 15px 0;

  font-size: 12px;
}

.dashboard__indicators {
  display: flex;
  margin-bottom: 20px;
}

.dashboard__indicator {
  margin-right: 20px;
}

.dashboard__weather {
  margin-left: 5px;
}

